# pyspim

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MONOREPO.md  Makefile  README.md  build.py  justfile  mkdocs.yml  pyproject.toml  test_parameter_passing.py  test_parameter_passing_simple.py  test_robust_parameters.py  test_roi_improvements.py  test_skip_roi_fix.py
.github/workflows/: docs.yml  pre-commit.yml  test.yml
docs/: gen_ref_pages.py  index.md  requirements.txt
docs/about/: license.md
docs/development/: contributing.md
docs/examples/: basic-usage.md  create_subset.py  fruiting-body-workflow.md  notebooks.md
docs/getting-started/: installation.md  quickstart.md
docs/images/: README.md
docs/stylesheets/: extra.css
docs/user-guide/: advanced-features.md  basic-usage.md  examples-overview.md  fruiting-body-workflow.md  notebooks.md  sample-data.md  snakemake-workflow.md
examples/: README.md
examples/data/fruiting_body_subset/: PSFA_demo.npy
examples/data/sample_data/: README.md
examples/nb/: basic_usage.ipynb
examples/scripts/dispim_pipeline/: deconvolve.py  deskew.py  deskew_gpu.py  register.py  transform.py
examples/scripts/profiling/: decon.py  register.py  register_bu.py  transform.py
examples/snakemake/: README.md  Snakefile  config.yaml  slurm.yaml
examples/snakemake/scripts/: deconvolve.py  deskew.py  detect_roi.py  load_data.py
script/dispim_pipeline/: 1_deskew.sh  2_register.sh  2_register_bu.sh  3_transform.sh  4_deconvolve.sh  deconvolve.py  deskew_cpu.py  register.py  register_wrapper.sh  transform.py
script/profiling/: 2_register.sh  2_register_ncu.sh  2_register_nsys.sh  3_transform.sh  README.txt  decon.py  deskew.py  deskew.sh  deskew_compare.py  deskew_large.py  deskew_large.sh  ncu_output_0.ncu-rep  ncu_output_1.ncu-rep  ncu_output_2.ncu-rep  ncu_output_3.ncu-rep  ncu_output_4.ncu-rep  register.py  register.sh  test.sh  test_deskew_methods.py
script/profiling/saved_ncus/: ncu_output0.ncu-rep  ncu_output_1gpu.ncu-rep  ncu_output_4gpu.ncu-rep  ncu_output_double.ncu-rep  ncu_output_float.ncu-rep
script/profiling/saved_nsys/: nsys_register_1gpu.nsys-rep  nsys_register_4gpu.nsys-rep
scripts/: diagnose_convolve.py  validate_01_imports.py  validate_02_init.py  validate_03_convolve.py  validate_04_psf_fft.py  validate_05_dispim.py
sh/: 1_deskew.sh  2_register.sh  3_transform.sh  ncuwrapper.sh
src/napari_pyspim/: README.md  __init__.py  _data_loader.py  _deconvolution.py  _deskewing.py  _main_widget.py  _registration.py  _roi_detection.py  _utils.py
src/napari_pyspim/tests/: __init__.py  test_basic.py  test_plugin.py
src/pyspim/: _util.py  dispimfusion.py  typing.py
src/pyspim/decon/: _util.py
src/pyspim/deskew/: __init__.py  ortho.py  ortho_raw_kernel.py  shear.py
src/pyspim/interp/: __init__.py  affine.py
src/pyspim/opt/: affine.py
src/pyspim/psf/: gauss.py
src/pyspim/reg/: mutinfo.py  parpow.py  pcc.py  powell.py
src/spimlib/: __init__.py  _matrix.py  _rotate_y.py  _util.py  dispimfusion.py  isotropize.py  roi.py  typing.py  util.py
src/spimlib/affine/: ._interp.py  interp.py  lossless.py
src/spimlib/conv/: _cuda.py  conv3.cu
src/spimlib/dask/: decon.py
src/spimlib/data/: ._umasi.py  dispim.py  umasi.py
src/spimlib/decon/: __init__.py  _util.py  dualview.py  singleview.py
src/spimlib/deconv/: _util.py  dualview.py
src/spimlib/deskew/: ._ortho.py  __init__.py  _util.py  dispim.cu  dispim.py  ortho.py  shear.py
src/spimlib/filter/: adaptive_median.py  fftwavelet.py
src/spimlib/fsc/: checkerboard.py  main.py
src/spimlib/interp/: affine.py  cubspl.cu  linear.cu  (+1 more)
(+35 files in other folders)
