[project]
name = "pyspim-monorepo"
version = "0.1.0"
description = "PySPIM monorepo containing core package and napari plugin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.1"
authors = [
    {name = "PySPIM Team"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[tool.uv.workspace]
# UV workspace configuration
members = [
    "packages/pyspim",
    "packages/napari-pyspim",
]

[tool.uv.sources]
pyspim = { workspace = true }

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"