[project]
name = "pyspim-monorepo"
version = "0.1.0"
description = "PySPIM monorepo containing core package and napari plugin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8.1"
authors = [
    {name = "PySPIM Team"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
]

[tool.uv.workspace]
# UV workspace configuration
members = [
    "packages/pyspim",
    "packages/napari-pyspim",
]

[tool.uv.sources]
pyspim = { workspace = true }
napari-pyspim = { workspace = true }